--- a/House_price_predict_chennai.ipynb
+++ b/House_price_predict_chennai.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/spsaravanangithub/Projects/blob/main/House_price_predict_chennai.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -2622,8 +2632,7 @@
       },
       "outputs": [],
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2,random_state=40)"
+        ""
       ]
     },
     {
@@ -2642,30 +2651,13 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "background_save": true,
-          "base_uri": "https://localhost:8080/",
-          "height": 200
+          "background_save": true
         },
-        "id": "693QNchK1F1g",
-        "outputId": "86050694-84e1-493b-c121-75c4c213ea71"
+        "id": "693QNchK1F1g"
       },
-      "outputs": [
-        {
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-89-7d34e755fe92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLinearRegression\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: fit() missing 1 required positional argument: 'y'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "model=LinearRegression\n",
-        "model.fit(x_train,y_train)"
+        ""
       ]
     },
     {
@@ -2684,7 +2676,9 @@
     "colab": {
       "name": "House price predict chennai",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNOtB+h7rekWNoZ5F/EaUMK",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
